--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=DelierySystem
+spring.application.name=DeliverySystem
 spring.datasource.url=jdbc:mysql://localhost:3306/CustomerDB
 spring.datasource.username=root
 spring.datasource.password=trinhhung2k5@-
