--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 spring.ai.openai.api-key=YOUR_OPENAI_API_KEY
+
+spring.security.user.name=root
+spring.security.user.password=1234
