Thêm storageController và figbug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,13 @@ spring.datasource.username=root
 spring.datasource.password=trinhhung2k5@-
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# Buộc Hibernate dùng tên cột EXACTLY theo @Column(name="…")
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 spring.ai.openai.api-key=YOUR_OPENAI_API_KEY
 
 spring.security.user.name=root
-spring.security.user.password=1234
+spring.security.user.password=trinhhung2k5@-
