--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=DeliverySystem
 spring.datasource.url=jdbc:mysql://localhost:3306/CustomerDB
 spring.datasource.username=root
-spring.datasource.password=trinhhung2k5@-
+spring.datasource.password=123456
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # Buộc Hibernate dùng tên cột EXACTLY theo @Column(name="…")
@@ -13,4 +13,4 @@ spring.jpa.show-sql=true
 spring.ai.openai.api-key=YOUR_OPENAI_API_KEY
 
 spring.security.user.name=root
-spring.security.user.password=trinhhung2k5@-
+spring.security.user.password=123456
